{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 21,
  "lineage": "7ff4ad0d-a95c-a32a-3fab-a275cbe44cd9",
  "resources": [
    {
      "module": "module.openshift_install",
      "mode": "managed",
      "type": "aws_instance",
      "name": "sm-terraform1-ec2",
      "provider": "module.openshift_install.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-013f17f36f8b1fefb",
            "arn": "arn:aws:ec2:us-east-1:970521514580:instance/i-0ce3768da8dc687f8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ce3768da8dc687f8",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "login-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f0600d3ee34ec677",
            "private_dns": "ip-10-0-138-101.ec2.internal",
            "private_ip": "10.0.138.101",
            "public_dns": "ec2-3-235-84-77.compute-1.amazonaws.com",
            "public_ip": "3.235.84.77",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ae7230c70da20204",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ff9f1590b205fd48",
            "tags": {
              "Name": "OpenshiftInstallUbuntu-0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02683501ab4288e12"
            ]
          },
          "dependencies": [
            "module.openshift_install.aws_key_pair.loginkey",
            "module.openshift_install.aws_subnet.terraform-subnet1",
            "module.openshift_install.aws_vpc.vpc-tf",
            "module.openshift_install.data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-013f17f36f8b1fefb",
            "arn": "arn:aws:ec2:us-east-1:970521514580:instance/i-00c29fcd1da543bba",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00c29fcd1da543bba",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "login-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0910f8b22bddb0be4",
            "private_dns": "ip-10-0-201-113.ec2.internal",
            "private_ip": "10.0.201.113",
            "public_dns": "ec2-34-200-220-20.compute-1.amazonaws.com",
            "public_ip": "34.200.220.20",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-05fdfd295a9aebe77",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ff9f1590b205fd48",
            "tags": {
              "Name": "OpenshiftInstallUbuntu-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02683501ab4288e12"
            ]
          },
          "dependencies": [
            "module.openshift_install.aws_key_pair.loginkey",
            "module.openshift_install.aws_subnet.terraform-subnet1",
            "module.openshift_install.aws_vpc.vpc-tf",
            "module.openshift_install.data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "module": "module.openshift_install",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-tf",
      "provider": "module.openshift_install.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:970521514580:internet-gateway/igw-061ac3def7b3af943",
            "id": "igw-061ac3def7b3af943",
            "owner_id": "970521514580",
            "tags": {
              "Name": "ipenshiftInstall-IGW0"
            },
            "vpc_id": "vpc-0f53d210d8b322d33"
          },
          "dependencies": [
            "module.openshift_install.aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "module": "module.openshift_install",
      "mode": "managed",
      "type": "aws_route",
      "name": "default_to_igw",
      "provider": "module.openshift_install.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-061ac3def7b3af943",
            "id": "r-rtb-00ed0b4dc3532bd2b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00ed0b4dc3532bd2b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.openshift_install.aws_internet_gateway.igw-tf",
            "module.openshift_install.aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "module": "module.openshift_install",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "module.openshift_install.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:970521514580:security-group/sg-0bc000d4347205bda",
            "description": "Allow all inbound traffic",
            "egress": [],
            "id": "sg-0bc000d4347205bda",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All Traffic Inbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all-sgroup",
            "name_prefix": null,
            "owner_id": "970521514580",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "openshiftInstall-subnet-name"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f53d210d8b322d33"
          },
          "dependencies": [
            "module.openshift_install.aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "module": "module.openshift_install",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform-subnet1",
      "provider": "module.openshift_install.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:970521514580:subnet/subnet-0ff9f1590b205fd48",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/16",
            "id": "subnet-0ff9f1590b205fd48",
            "map_public_ip_on_launch": false,
            "owner_id": "970521514580",
            "tags": {
              "Name": "OpenshiftInstall-subnet"
            },
            "vpc_id": "vpc-0f53d210d8b322d33"
          },
          "dependencies": [
            "module.openshift_install.aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "module": "module.openshift_install",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-tf",
      "provider": "module.openshift_install.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:970521514580:vpc/vpc-0f53d210d8b322d33",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-075c317f5371e32ef",
            "default_route_table_id": "rtb-00ed0b4dc3532bd2b",
            "default_security_group_id": "sg-02683501ab4288e12",
            "dhcp_options_id": "dopt-bad764c0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f53d210d8b322d33",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00ed0b4dc3532bd2b",
            "owner_id": "970521514580",
            "tags": {
              "Name": "openshiftInstall-vpc"
            }
          }
        }
      ]
    }
  ]
}